<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Hidden at the moment -->
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/selectall"
        android:title="@string/select_all"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/cut"
        android:title="@string/cut"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/copy"
        android:title="@string/copy"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_paste"
        android:icon="@drawable/paste"
        android:title="@string/paste"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_bold"
        android:icon="@drawable/bold"
        android:title="@string/bold"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_italic"
        android:icon="@drawable/italic"
        android:title="@string/italic"
        app:showAsAction="always" />
</menu>
